changed icons, created more of api
