# backend/src/routes/transactions/index.ts
@@ -11,8 +11,15 @@ TransactionRoutes.get('/', async (req, res) => {
   res.json(resuls);
 });
 TransactionRoutes.get('/:id', async (req, res) => {
-  res.send('TODO');
+  let resuls = await controller.getById(req.params.id);
+  res.json(resuls);
 });
 TransactionRoutes.delete('/:id', async (req, res) => {
   res.send('TODO');
+});
+
+//applies partial modification
+TransactionRoutes.patch('/:id', async (req, res) => {
+  let result = await controller.patch(req.params.id, req.body);
+  res.json(result);
 });
